--- a/MovieRush/src/app/movies/movie-list/movie-list.component.html
+++ b/MovieRush/src/app/movies/movie-list/movie-list.component.html
@@ -4,26 +4,29 @@
          <th class="tagline">What to watch?</th>
 		<tr *ngFor="let f of posters">
                 <td>
+         <a href="#" class="movie-selected" (movieSelected)="onMovieSelected(f)">
+
                 <div class="poster col-sm-12 links" >
                 <div class="card">
-        <div class="poster"><img src="../../assets/tintin.jpeg"></div>
+        <div class="poster"><img [src]="f.imageSrc" class="poster-image"></div>
     <img src="../../assets/heart.svg" class="likes"><span class="rating">83% 123K likes</span>
-        <div class="details">Tintin(2010)</div>
+        <div class="details">{{f.imageAlt}}</div>
          
        
     </div>
     <div class="genere">Animation/Action</div>  
     </div>
-                
+</a>   
              
-            </td>           
+            </td>  
+
 		</tr>
         <br>
         <tr *ngFor="let f of posters">
             <td>
             <div class="poster col-sm-12 links" >
             <div class="card">
-    <div class="poster"><img src="../../assets/tintin.jpeg"></div>
+    <div class="poster"><img src="../../assets/tintin.jpeg" class="poster-image"></div>
 <img src="../../assets/heart.svg" class="likes"><span class="rating">83% 123K likes</span>
     <div class="details">Tintin(2010)</div>
      
