Added movie service
Refactored the movie model such that it is used across the components

--- a/MovieRush/src/app/movies/movie-list/movie-item/movie-item.component.html
+++ b/MovieRush/src/app/movies/movie-list/movie-item/movie-item.component.html
@@ -1,11 +1,11 @@
 
 <div class="pull-center">
-    <h4 class="list-group-item-heading">{{movie.name}}</h4>
+    <h4 class="list-group-item-heading">{{movie.imageAlt}}</h4>
 </div>
 <span class="pull-left">
     <img 
-    src="{{movie.imgPath}}"
-    alt="{{movie.name}}"
+    src="{{movie.imageAlt}}"
+    alt="{{movie.imageAlt}}"
     class="img-responsive"
     style="max-height:50px;">
 </span>
