--- a/MovieRush/src/app/app.component.html
+++ b/MovieRush/src/app/app.component.html
@@ -6,7 +6,7 @@
 
     </div>
     <div class="row">
-        <app-home  [images]="images" [autoSlide]="false"
+        <app-home [autoSlide]="false"
 *ngIf="active==='home'"></app-home>  
  <app-movie-details *ngIf="active!='home'"></app-movie-details>
 
