--- a/MovieRush/src/app/home/home.component.html
+++ b/MovieRush/src/app/home/home.component.html
@@ -23,8 +23,5 @@
     </button>
     <br>
     <div class="movielist" style="background-color: #E7E7E7"> 
-        <!-- list of movies -->
-        <app-movie-list [posters]="images"></app-movie-list>
-        <!-- <app-movie-list></app-movie-list> -->
-
+        <app-movie-list></app-movie-list>
     </div>
