--- a/MovieRush/src/app/app.component.html
+++ b/MovieRush/src/app/app.component.html
@@ -6,15 +6,7 @@
 
     </div>
     <div class="row">
-        <app-home [autoSlide]="false"
-*ngIf="active==='home'"></app-home>  
- <app-movie-details *ngIf="active!='home'"></app-movie-details>
-
-<br>
-
-
+       <router-outlet></router-outlet>
     </div> 
 
 
-
-<!-- <app-register></app-register> -->
