--- a/MovieRush/src/app/header/header.component.css
+++ b/MovieRush/src/app/header/header.component.css
@@ -98,12 +98,13 @@ nav .logo{
   padding-left:60px ;
 }
 
-nav ul li a:hover{
+.selected{
   color:cyan;
+  
   border-radius: 5px;
   box-shadow: 0 0 5px #33ffff,
               0 0 5px #66ffff;
-              
+  
 }
 
 nav ul li ul .user:hover{
@@ -195,6 +196,12 @@ nav ul .search-icon .icon span{
 
 .open{
   font-size: 16px;;
+}
+
+.active{
+  color:cyan;
+  box-shadow: none;
+
 }
     
  @media (max-width:840px){
