--- a/MovieRush/src/app/movies/movie-list/movie-list.component.html
+++ b/MovieRush/src/app/movies/movie-list/movie-list.component.html
@@ -4,7 +4,7 @@
          <th class="tagline">What to watch?</th>
 		<tr *ngFor="let f of posters">
                 <td>
-         <a href="#" class="movie-selected" (movieSelected)="onMovieSelected(f)">
+         <a routerLink="/" class="movie-selected">
 
                 <div class="poster col-sm-12 links" >
                 <div class="card">
