--- a/MovieRush/src/app/movies/movie-details/movie-details.component.html
+++ b/MovieRush/src/app/movies/movie-details/movie-details.component.html
@@ -29,7 +29,7 @@
     
         <div class="col-md-3">
             <br>
-            <app-reviews></app-reviews>
+            <router-outlet></router-outlet>
     
         </div>
     
