--- a/MovieRush/src/app/movies/movie-details/movie-details.component.css
+++ b/MovieRush/src/app/movies/movie-details/movie-details.component.css
@@ -38,3 +38,22 @@ body{
      border-radius: 20px;
 }
 
+.fa-star{
+    color:yellow;
+    font-size: 1.5em;
+}
+
+.box {
+    border-radius: 5px;
+    box-shadow: 0px 30px 40px -20px hsl(229, 6%, 66%) ;
+    padding: 20px;
+    margin: 20px;  
+}
+.orange {
+    border-top: 3px solid orange;
+}
+
+.review-container{
+    height: fit-content;
+    width:450px;
+}
