--- a/MovieRush/src/app/movies/movie-details/movie-details.component.html
+++ b/MovieRush/src/app/movies/movie-details/movie-details.component.html
@@ -32,7 +32,30 @@
             <router-outlet></router-outlet>
     
         </div>
+    </div>
+    <div class="col-md-4">
+        <div class="review-card">
+            User Reviews
+            <div *ngFor="let review of reviews">
+               
     
+                <div class="box box-down orange review-container">
+                    <i class="fa fa-star" aria-hidden="true"></i> {{review.rating}}/10.0
+                    <h4> {{review.headline}}</h4>
+                   {{review.name}}
+                    <p>
+                        {{review.review}}
+                    </p>
+                  
+                  
+                    </div>
+         
+    
+               
+            </div>
+    
+        </div>
+
     </div>
     
     
