--- a/MovieRush/src/app/reviews/review-edit/review-edit.component.css
+++ b/MovieRush/src/app/reviews/review-edit/review-edit.component.css
@@ -14,4 +14,11 @@
     white-space: nowrap;
     border: 0;
   }
+textarea.ng-invalid.ng-touched{
+     border:1px solid red;
+ }
   
+ input.ng-invalid.ng-touched{
+    border:1px solid red;
+}
+ 
