register form is done
The login function and backend connectivity is yet to be completed

--- a/MovieRush/src/app/register/register.component.css
+++ b/MovieRush/src/app/register/register.component.css
@@ -92,7 +92,6 @@
 .submit-btn{
     width:85%;
     padding:10px 30px;
-    cursor:pointer;
     display:block;
     margin:auto;
     background: linear-gradient(to right,#ff105f,#ffad06);
@@ -119,3 +118,6 @@ span{
     left:450px;
 }
 
+.ng-invalid input{
+    cursor:auto;
+}
