--- a/MovieRush/src/app/app.component.html
+++ b/MovieRush/src/app/app.component.html
@@ -1,7 +1,7 @@
 <div class="cols">
     <div class="row">
         <div class="navbar">
-            <header-component (notify)="changePage($event)"></header-component>
+            <header-component></header-component>
             </div>
 
     </div>
