--- a/MovieRush/src/app/register/register.component.html
+++ b/MovieRush/src/app/register/register.component.html
@@ -26,7 +26,7 @@
          placeholder="Username" 
          ngModel
           #username="ngModel" 
-           name="usrname" 
+           name="username" 
          required>
         <input type="password"
          class="input-field" 
