--- a/MovieRush/src/app/profile/profile.component.html
+++ b/MovieRush/src/app/profile/profile.component.html
@@ -1,1 +1,8 @@
-<p>profile works!</p>
+<div *ngIf="user">
+    <ul class="list-group">
+        <li class="list-group-item">Username:{{user.user.username}}</li>
+        <li class="list-group-item">Email:{{user.user.email}}</li>
+    </ul>
+</div>
+
+
