--- a/MovieRush/src/app/profile/profile.component.html
+++ b/MovieRush/src/app/profile/profile.component.html
@@ -1,8 +1,8 @@
-<div *ngIf="user">
+<div *ngIf="user" align="center">
+    <h2 class="page-header">{{user.user.username}}</h2>
     <ul class="list-group">
         <li class="list-group-item">Username:{{user.user.username}}</li>
         <li class="list-group-item">Email:{{user.user.email}}</li>
     </ul>
 </div>
-
 
