--- a/MovieRush/src/app/header/header.component.html
+++ b/MovieRush/src/app/header/header.component.html
@@ -23,10 +23,10 @@
         <input type="checkbox" id="btn">
         </li>
                <li routerLinkActive="selected" [routerLinkActiveOptions]="{exact: true}"><a routerLink="/home">HOME</a></li>
-               <li routerLinkActive="selected"  [routerLinkActiveOptions]="{exact: true}" >
+               <li routerLinkActive="selected"   [routerLinkActiveOptions]="{exact: true}" >
                <img src="bookmark.png" class="bookmark" alt="reel" />
-               <a  routerLink="/watchlist" >WATCHLIST</a></li>
-               <li routerLinkActive="selected"  [routerLinkActiveOptions]="{exact: true}"><a routerLink="/signin">SIGN IN</a>
+               <a (click)="navigateWatchlist()">WATCHLIST</a></li>
+                <li routerLinkActive="selected"  [routerLinkActiveOptions]="{exact: true}"><a routerLink= " /signin">SIGN IN</a>
                <ul class="btn-group"
                appDropDown
                *ngIf="status"
@@ -47,4 +47,5 @@
                </li>
             </ul>
         </nav>
+        <flash-messages></flash-messages>
      </body>
