front end work half done

--- a/MovieRush/src/app/movies/movie-list/movie-list.component.html
+++ b/MovieRush/src/app/movies/movie-list/movie-list.component.html
@@ -16,32 +16,17 @@
               </div>
               <img src="../../assets/heart.svg" class="likes" /><span
                 class="rating"
-                >83% 123K likes</span
+                >Add to wishlist</span
               >
-              <div class="details">{{ f.imageAlt }}</div>
+              <br>
+              <br>
             </div>
-            <div class="genere">Animation/Action</div>
+              <span class="details">{{ f.imageAlt }}</span>
+            <br>
+            <span class="genere">Animation/Action</span>
           </div>
         </a>
       </td>
     </tr>
     <br />
-    <tr *ngFor="let f of posters">
-      <td>
-        <div class="poster col-sm-12 links">
-          <div class="card">
-            <div class="poster">
-              <img src="../../assets/tintin.jpeg" class="poster-image" />
-            </div>
-            <img src="../../assets/heart.svg" class="likes" /><span
-              class="rating"
-              >83% 123K likes</span
-            >
-            <div class="details">Tintin(2010)</div>
-          </div>
-          <div class="genere">Animation/Action</div>
-        </div>
-      </td>
-    </tr>
-  </table>
-</div>
+   <div>Details from wishlist comes here</div>
