altered the home page flow

--- a/MovieRush/src/app/home/home.component.html
+++ b/MovieRush/src/app/home/home.component.html
@@ -1,6 +1,6 @@
     <div *ngIf="images && images.length>0" class="carousel-container">
         <img  *ngFor="let image of images;let i=index" 
-        [src]="image.imageSrc" [alt]="image.imageAlt"
+        [src]="image['Poster']" [alt]="image['imageAlt']"
         [ngClass]="{'image-active':selectedIndex===i}"
         class="fade"
         >
