--- a/MovieRush/src/app/movies/movie-details/movie-details.component.html
+++ b/MovieRush/src/app/movies/movie-details/movie-details.component.html
@@ -13,17 +13,17 @@
             <br>
             <div class="container">
                 <img 
-                src="{{movie.imageSrc }}"
-                alt="{{movie.imageAlt }}"
+                src="{{movie.Poster }}"
+                alt="{{movie.Title }}"
                 class="img-responsive poster">
                 <div (click)="toggleColor()">
             <i class="fa fa-bookmark"  style="font-size: 35px;"[ngClass]="{'active':isActive}"></i>
             </div>
             </div>
             <br>
-            <p><iframe  [src]="movie.trailerlink | safe:'resourceUrl'" title="YouTube video player"
+            <!-- <p><iframe  [src]="movie.trailerlink | safe:'resourceUrl'" title="YouTube video player"
              frameborder="0" allow="accelerometer; autoplay; clipboard-write;
-              encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="trailer"></iframe></p>
+              encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="trailer"></iframe></p> -->
         </div>
         <div class="col-md-4">
        <app-movies [movie]="movie"></app-movies>    
