made change of flow in review function
Some random movie not define error comes have to check that out

--- a/MovieRush/src/app/reviews/review-edit/review-edit.component.html
+++ b/MovieRush/src/app/reviews/review-edit/review-edit.component.html
@@ -17,12 +17,12 @@
         <div ([*ngIf])=activated>
           <!-- {{fixMovie()}} -->
           <img 
-          src="{{movie.imageSrc}}"
-          alt="{{movie.imageAlt}}"
+          src="{{movie.Poster}}"
+          alt="{{movie.Title}}"
           class="img-responsive"
           style="max-height:80px;">
-            <h5 class="list-group-item-heading" align="center">{{movie.imageAlt}}</h5>
-            <h5 class="list-group-item-heading" align="center">{{movie.releaseDate}}</h5>
+            <h5 class="list-group-item-heading" align="center">{{movie.Title}}</h5>
+            <h5 class="list-group-item-heading" align="center">{{movie.Released}}</h5>
           
     </div> 
    </div> 
