--- a/MovieRush/src/app/watchlist/watchlist.component.html
+++ b/MovieRush/src/app/watchlist/watchlist.component.html
@@ -1,1 +1,34 @@
-<p>Your watchlist is empty.</p>
+<div class="posterTable">
+   
+    <br />
+    <table
+      class="fundClassesTable"
+      [class.transpose]="transpose"
+      id="toggled-element"
+    >
+    <th class="tagline">Your BucketList</th>
+      <tr *ngFor="let f of watchlist.user.watchlist">
+        <td>
+          <a [routerLink]="['/',f.imdbID]">
+            <div class="poster col-sm-12 links">
+              <div class="card">
+                <div class="poster">
+                  <img [src]="f['Poster']" class="poster-image" />
+                </div>
+                <img src="../../assets/heart.svg" class="likes" /><span
+                  class="rating"
+                  >Remove from wishlist</span
+                >
+                <br>
+                <br>
+                <span class="details">{{ f['Title'] }}</span>
+                <br>
+                <br>
+              </div>                       
+              <br>
+              <span class="genere">{{ f['Genre'] }}</span>
+            </div>
+          </a>
+        </td>
+      </tr>
+      <br />
