--- a/MovieRush/src/app/movies/movie-details/movie-details.component.html
+++ b/MovieRush/src/app/movies/movie-details/movie-details.component.html
@@ -8,7 +8,7 @@
     <title>Movie Assets</title>
 </head>
 <body>
-    <div class="row" >
+    <div class="row"  *ngIf="movie">
         <div class="col-md-4">
             <br>
             <div class="container">
