added the delete feature

--- a/MovieRush/src/app/movies/movie-details/movie-details.component.html
+++ b/MovieRush/src/app/movies/movie-details/movie-details.component.html
@@ -21,9 +21,10 @@
             </div>
             </div>
             <br>
-            <!-- <p><iframe  [src]="movie.trailerlink | safe:'resourceUrl'" title="YouTube video player"
+            <!-- <p><iframe  [src]="https://www.youtube.com/embed/yRUAzGQ3nSY | safe:'resourceUrl'" title="YouTube video player"
              frameborder="0" allow="accelerometer; autoplay; clipboard-write;
               encrypted-media; gyroscope; picture-in-picture" allowfullscreen class="trailer"></iframe></p> -->
+              <!-- <iframe width="560" height="315" src="https://www.youtube.com/embed/yRUAzGQ3nSY" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe> -->
         </div>
         <div class="col-md-4">
        <app-movies [movie]="movie"></app-movies>    
